using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace CollectionSortingBenchmarks.Interfaces
{
    public interface IIntListSorter : ISorter<List<int>>
    {
    }
}
